# launcher

./: .eslintrc  .prettierrc  components.json  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
app/(main)/: SideNavButton.tsx  layout.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/app/: global-error.tsx  global.css  layout.tsx  page.tsx
src/app/(main)/: SideNav.tsx  SideNavItem.tsx  TitleBar.tsx  error.tsx  layout.tsx  loading.tsx  page.tsx
src/app/(main)/(container)/: Title.tsx  layout.tsx
src/app/(main)/(container)/edit/: page.tsx
src/app/(main)/(container)/edit/(entry)/entry/: page.tsx
src/app/(main)/(container)/edit/(item)/card/: page.tsx
src/app/(main)/(container)/edit/(item)/entry/: page.tsx
src/app/(main)/(container)/edit/(top)/: JsonForm.tsx  layout.tsx  page.tsx
src/app/(main)/(container)/settings/: SwitchTile.tsx  page.tsx
src/app/(main)/home/: TopCarousel.tsx  TrendSection.tsx  page.tsx
src/components/: Button.tsx  ContainerTitle.tsx  EntryBar.tsx  ExecButton.tsx  ReturnNav.tsx
src/components/ui/: Button.tsx  switch.tsx
src/lib/: atoms.ts  hooks.ts  utils.ts
